After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737439 - Plug memory leak in gtk_test_find_label()
Plug memory leak in gtk_test_find_label()
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-09-26 14:44 UTC by Garrett Regier
Modified: 2014-09-26 22:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Plug memory leak in gtk_test_find_label() (891 bytes, patch)
2014-09-26 14:45 UTC, Garrett Regier
none Details | Review

Description Garrett Regier 2014-09-26 14:44:27 UTC
It isn't freeing the GList.
Comment 1 Garrett Regier 2014-09-26 14:45:27 UTC
Created attachment 287163 [details] [review]
Plug memory leak in gtk_test_find_label()