Fix a memory leak in gtk_test_find_label

Pointed out by Garrett Regier in
https://bugzilla.gnome.org/show_bug.cgi?id=737439